--- a/inventory/poling/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/inventory/poling/group_vars/k8s_cluster/k8s-cluster.yml
@@ -14,6 +14,9 @@ kube_cert_dir: "{{ kube_config_dir }}/ssl"
 # This is where all of the bearer tokens will be stored
 kube_token_dir: "{{ kube_config_dir }}/tokens"
 
+# This is where to save basic auth file (added by rodney on 2.28.2024)
+kube_users_dir: "{{ kube_config_dir }}/users"
+
 kube_api_anonymous_auth: true
 
 ## Change this to use another Kubernetes version, e.g. a current beta release
